--- a/HTML_Sample_Project/pom.xml
+++ b/HTML_Sample_Project/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>HTML_Project_1</artifactId>
+    <artifactId>HTML_Sample_Project</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>HTML_Project_1</name>
+    <name>HTML_Sample_Project</name>
     <packaging>war</packaging>
 
     <properties>
@@ -22,12 +22,6 @@
             <groupId>javax.faces</groupId>
             <artifactId>javax.faces-api</artifactId>
             <version>2.3</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
